test/classes/bradc/overloadMethods/v1NoReturnValue.good
v1NoReturnValue.chpl:24: error: illegal use of function that does not return a value: 'bbox'
